wip: making library

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = zcash-resp-time-MANAN-MONGA
+name = zcash_service_status
 version = 0.0.1
-author = Manan Monga
-author_email = author@example.com
-description = A small example package
+author = Manan Monga, Aviral Srivastava
+author_email = mananmonga@gmail.com, hi@avisri.com
+description = Zcash Service Status Library
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/kebab-mai-haddi/zcash_service_status_library/
 project_urls = 
-	Bug Tracker = https://github.com/pypa/sampleproject/issues
+	Bug Tracker = https://github.com/kebab-mai-haddi/zcash_service_status_library/issues
 classifiers = 
 	Programming Language :: Python :: 3
 	License :: OSI Approved :: MIT License
@@ -18,7 +18,7 @@ classifiers =
 package_dir = 
 	= src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.9
 
 [options.packages.find]
 where = src
